# cpp_projects

./: .gitignore
APolishTranslator/: A2TreeTranslator.cpp  A2TreeTranslator.h  APolishTranslator.cpp  APolishTranslator.h  ASmb.cpp  ASmb.h  AStack.cpp  AStack.h  CMakeLists.txt  NewBinTree.h  main.cpp  main2.cpp
Cpp/: CMakeLists.txt  a.cpp  class.cpp  class.h  fid.cpp  main.cpp  myclass.cpp  myclass.h
Dec2/: CMakeLists.txt  drawwidget.cpp  drawwidget.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h
TestFltk/: TestFltk.sln
TestFltk/TestFltk/: TestFltk.vcxproj
TestFltk/TestFltk/x64/Debug/: vc143.idb
TestFltk/TestFltk/x64/Debug/TestFltk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestFltk.lastbuildstate
VTK/: CMakeLists.txt  main.cpp
bkv/: CMakeLists.txt  main.c
cat/: 1.txt  2.txt  CMakeLists.txt  grep.c  main.c
fluid/: CMakeLists.txt  fluid.pro  main.cpp
harlabs/: CMakeLists.txt  fact.c  matr.cpp  sin.cpp
newfltk/: BC1.cxx  Bccc1.cxx  CMakeLists.txt  Rom.cpp
untitled/: CMakeLists.txt  main.cpp  mytemplates.h  person.cpp  person.h
untitled1/: CMakeLists.txt  class.h  main.cpp
untitled2/: main.cpp
